@@ -8,8 +8,6 @@
 ;;
 (param *rebuild-manifest* '(
 			    "src/debug"
-			    "src/parts/xball"
-			    "src/parts/xball-midi-render"
 			    ))
 
 
